--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,16 @@
 [env:nodemcuv2]
 platform = espressif8266
-board = nodemcuv2
 framework = arduino
+board = nodemcuv2
+
 platform_packages =
     toolchain-xtensa@~2.100100.0
+
 build_flags =
     -std=c++20
 lib_deps =
     bodmer/TFT_eSPI
     bolderflight/Bolder Flight Systems MPU9250
+
+upload_speed = 921600
+monitor_speed = 115200
