Updated expressif toolchain

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,7 @@ framework = arduino
 board = nodemcuv2
 
 platform_packages =
-    toolchain-xtensa@~2.100100.0
+    toolchain-xtensa
 
 build_flags =
     -std=c++20
